snipdoc/src/snapshots/snipdoc__walk__tests__can_exclude_files.snap
---
source: snipdoc/src/walk.rs
expression: file_paths
---
[
    "file.txt",
    "folder/file.txt",
    "README.md",
]
