snipdoc/src/snapshots/snipdoc__walk__tests__can_walk_with_excludes.snap
---
source: snipdoc/src/walk.rs
expression: file_paths
---
[
    "file.txt",
    "folder/file.txt",
    "folder/folder/2.txt",
    "README.md",
]
