snipdoc/src/snapshots/snipdoc__walk__tests__can_walk_with_includes.snap
---
source: snipdoc/src/walk.rs
expression: file_paths
---
[
    "folder/file.txt",
    "folder/folder/2.txt",
]
